fix: overflow before contact and margin in about and fixing lightmode color on skills

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,16 +46,20 @@
   --font-mono: var(--font-geist-mono);
 }
 
+html {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  width: 100%;
   transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-html {
-  scroll-behavior: smooth;
 }
 
 /* Custom scrollbar untuk light mode */
